--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="tr">	
 <head>
 	<meta charset="utf-8">
-	<title>Sayfa Başlığı</title>
+	<title>Yusuf Temiz Blog</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
-
 <body>
+
+	<script type="text/javascript" src="js/popper.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
