--- a/index.html
+++ b/index.html
@@ -3,10 +3,49 @@
 <head>
 	<meta charset="utf-8">
 	<title>Yusuf Temiz Blog</title>
+	<link rel="icon" href="image/main.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<style>
+		.nav-link {
+			margin: 0 .5rem 0 0 ;
+		}
+	</style>
+
 </head>
 <body>
 
+<nav class="navbar navbar-dark navbar-expand-lg bg-dark" >
+  <a class="navbar-brand mb-0 h1" href="#">
+  	&#x4B5; Yusuf Temiz
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/yusuftemiz">Github</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://www.linkedin.com/in/yusuftemiz/">Linkedin</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Twitter</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Instagram</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      
+    </form>
+  </div>
+</nav>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/popper.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
