--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       				<p class="card-text">Email: yusuftemiz22@gmail.com</p>
     			</div>
   			</div>
-  			<div class="col"> <br>
+  			<div class="col-sm"> <br>
   				<p>İlkokul ve liseyi doğduğum şehirde okudum. Üniversite sınavında Samsun Ondokuz Mayıs Üniversitesini 
   				kazandım ve 4 yıllık Bilgisayar Mühendisliği bölümünü bitirmek üzereyim. </p>
   				<p>Okul derslerim gereği Ruby, C, Java, Sql, Android öğrendim,</p> 
