--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="tr">	
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Yusuf Temiz Blog</title>
 	<link rel="icon" href="image/main.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -14,6 +15,7 @@
 		    position: relative;
  		}
   		
+  		.footer{border-top:1px solid #eaecef;text-align:center;color:#4e6e8e}
 	</style>
 </head>
 
@@ -91,6 +93,9 @@
 <div id="section3" class="container-fluid bg-dark text-white" style="padding-top:70px;padding-bottom:70px">
   <h1>Projelerim</h1>
   <p>ÇOK YAKINDA!</p>
+  </div>
+  <div class="footer bg-dark text-white" >
+    Yusuf Temiz Copyright © 2020
   </div>
 	
 	<script type="text/javascript" src="js/jquery.min.js"></script>
