--- a/index.html
+++ b/index.html
@@ -7,82 +7,90 @@
 	<link rel="icon" href="image/main.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<style>
-		.nav-link {
-			margin: 0 .5rem 0 0 ;
-		}
-
+		
 		body {
 		    position: relative;
  		}
 
  		.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  height: 100px;
-  width: 100px;
-  outline: black;
-  background-image: none;
-}
+		.carousel-control-next-icon {
+  			height: 100px;
+  			width: 100px;
+  			outline: black;
+  			background-image: none;
+		}
 
-.carousel-control-next-icon:after
-{
-  content: '>';
-  font-size: 55px;
-  color: black;
-}
+		.carousel-control-next-icon:after {
+  			content: '>';
+  			font-size: 55px;
+  			color: black;
+		}
 
-.carousel-control-prev-icon:after {
-  content: '<';
-  font-size: 55px;
-  color: black;
-}
+		.carousel-control-prev-icon:after {
+  			content: '<';
+  			font-size: 55px;
+  			color: black;
+		}
 
-  		.footer{border-top:1px solid #eaecef;text-align:center;color:#4e6e8e}
+		img.responsive {
+			max-width: 100%;
+			height: auto;
+		}
+
+  		.footer {
+  			border-top: 1px solid #eaecef;
+  			text-align: center;
+  			color: #4e6e8e;
+  		}
+
 	</style>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">  
-	<a class="navbar-brand mb-0 h1" href="yusuftemiz.github.io">
+  <a class="navbar-brand mb-0 h1" href="https://yusuftemiz.github.io">
   	&#x4B5; Yusuf Temiz
- 	</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-  <span class="navbar-toggler-icon"></span>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" >
+  <span class="navbar-toggler-icon" ></span>
   </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-  <ul class="navbar-nav" >
+  <div class="collapse navbar-collapse w-100 order-3 dual-collapse2" id="collapsibleNavbar" style="text-align: center;">
+  <ul class="navbar-nav mr-auto" >
     <li class="nav-item">
-      <a class="nav-link" href="#section1">Merhaba</a>
+      <a class="nav-link" href="#Merhaba">Merhaba</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#section2">Hakkımda</a>
+      <a class="nav-link" href="#Hakkımda">Hakkımda</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#section3">Projelerim</a>
+      <a class="nav-link" href="#Projelerim">Projelerim</a>
     </li>
+  </ul>
+  <ul class="navbar-nav ml-auto">
     <li class="nav-item">
         <a class="nav-link" href="https://github.com/yusuftemiz">Github</a>
-      </li>
-      <li class="nav-item">
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="https://www.linkedin.com/in/yusuftemiz/">Linkedin</a>
-      </li>
-      <li class="nav-item">
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="https://twitter.com/Yusuf_temiz2">Twitter</a>
-      </li>
-      <li class="nav-item">
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="https://www.instagram.com/yusuftemiz2/">Instagram</a>
-      </li>
+    </li>
   </ul>
-</div>
+  </div>  
 </nav>
 
-<div id="section1" class="container-fluid bg-dark text-white" style="padding-top:70px;padding-bottom:70px">
+<div id="Merhaba" class="container-fluid bg-dark text-white" style="padding-top:70px;padding-bottom:70px">
   <h1>Merhaba</h1>
   <p>Buralarda bir yerlerde benim hakkımda bilgileri ve üzerinde çalıştığım projelerimi bulabilirsin.
   </p> <br> <br>
   <p>Bulamıyorsan kesinlikle benim hatamdır, daha sonra tekrar deneyin. :)</p>
 </div>
-<div id="section2" class="container-fluid border" style="padding-top:70px;padding-bottom:70px">
+<div id="Hakkımda" class="container-fluid border" style="padding-top:70px;padding-bottom:70px">
 	<h1>Hakkımda</h1>
   		<div class="container">
   		<div class="row">
@@ -111,7 +119,7 @@
 		</div>
 
 </div>
-<div id="section3" class="container-fluid bg-dark" style="padding-top:70px;padding-bottom:70px">
+<div id="Projelerim" class="container-fluid bg-dark" style="padding-top:70px;padding-bottom:70px">
   <h1 class="text-white">Projelerim</h1>
   <br>
   <div class="container">
@@ -188,34 +196,34 @@
         <div id="demo" class="carousel slide" data-ride="carousel" style="text-align: center;">
 		<div class="carousel-inner" >
     		<div class="carousel-item active" >
-      			<img src="image/TwitteRT/1.jpg" alt="Tw1" >
+      			<img src="image/TwitteRT/1.jpg" alt="Tw1" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/2.jpg" alt="Tw2" >
+      			<img src="image/TwitteRT/2.jpg" alt="Tw2" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/3.jpg" alt="Tw3" >
+      			<img src="image/TwitteRT/3.jpg" alt="Tw3" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/4.jpg" alt="Tw4" >
+      			<img src="image/TwitteRT/4.jpg" alt="Tw4" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/5.jpg" alt="Tw5" >
+      			<img src="image/TwitteRT/5.jpg" alt="Tw5" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/6.jpg" alt="Tw6" >
+      			<img src="image/TwitteRT/6.jpg" alt="Tw6" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/7.jpg" alt="Tw7" >
+      			<img src="image/TwitteRT/7.jpg" alt="Tw7" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/8.jpg" alt="Tw8" >
+      			<img src="image/TwitteRT/8.jpg" alt="Tw8" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/9.jpg" alt="Tw9" >
+      			<img src="image/TwitteRT/9.jpg" alt="Tw9" class="responsive">
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/10.jpg" alt="Tw10" >
+      			<img src="image/TwitteRT/10.jpg" alt="Tw10" class="responsive">
     		</div>
   		</div>
   
