--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Yusuf Temiz Blog</title>
 	<link rel="icon" href="image/main.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+
 	<style>
 		
 		body {
@@ -69,16 +71,16 @@
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-        <a class="nav-link" href="https://github.com/yusuftemiz">Github</a>
+        <a class="nav-link fa fa-github" href="https://github.com/yusuftemiz"> Github</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="https://www.linkedin.com/in/yusuftemiz/">Linkedin</a>
+        <a class="nav-link fa fa-linkedin" href="https://www.linkedin.com/in/yusuftemiz/"> Linkedin</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/Yusuf_temiz2">Twitter</a>
+        <a class="nav-link fa fa-twitter" href="https://twitter.com/Yusuf_temiz2"> Twitter</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="https://www.instagram.com/yusuftemiz2/">Instagram</a>
+        <a class="nav-link fa fa-instagram" href="https://www.instagram.com/yusuftemiz2/"> Instagram</a>
     </li>
   </ul>
   </div>  
@@ -124,6 +126,7 @@
   <br>
   <div class="container">
   <div id="accordion">
+
     <div class="card">
       <div class="card-header bg-dark">
         <a class="card-link text-white" data-toggle="collapse" href="#collapseOne">
@@ -132,33 +135,43 @@
       </div>
       <div id="collapseOne" class="collapse" data-parent="#accordion">
         <div class="card-body">
-        <p>Visual Studio üzerinden C# programlama diliyle yazılmıştır. DevExpress kullanılmıştır. Microsoft SQL Server Management Studio aracılığıyla veritabanı geliştirilmiştir. Barkod okutmalı hem stok hem satış sistemi olarak kullanılabilecek bir masaüstü uygulamasıdır. Uygulama içerisinden görüntüler aşağıdadır.</p>
+        <p>Visual Studio üzerinden C# programlama diliyle yazılmıştır. DevExpress kullanılmıştır. 
+        Microsoft SQL Server Management Studio aracılığıyla veritabanı geliştirilmiştir. 
+    	Barkod okutmalı hem stok hem satış sistemi olarak kullanılabilecek bir masaüstü uygulamasıdır. 
+    	Kod içeriğini <a class="text-dark" href="https://github.com/yusuftemiz/BarkodSistemi" target="_blank">buradan</a> bulabilirsin. 
+    	Uygulama içerisinden görüntüler aşağıdadır.</p>
 
         <div id="demo1" class="carousel slide" data-ride="carousel" style="text-align: center;">
 		<div class="carousel-inner" >
     		<div class="carousel-item active" >
-      			<img src="image/Barkod/1.jpg" alt="Tw1" style="width: 100%; height: 100%">
+    			<a href="https://yusuftemiz.github.io/image/Barkod/1.jpg" target="_blank" >
+      			<img src="image/Barkod/1.jpg" alt="Tw1" style="width: 100%; height: 100%"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/Barkod/2.jpg" alt="Tw2" style="width: 100%; height: 100%">
+    			<a href="https://yusuftemiz.github.io/image/Barkod/2.jpg" target="_blank" >
+      			<img src="image/Barkod/2.jpg" alt="Tw2" style="width: 100%; height: 100%"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/Barkod/3.jpg" alt="Tw3" style="width: 100%; height: 100%">
+    			<a href="https://yusuftemiz.github.io/image/Barkod/3.jpg" target="_blank" >
+      			<img src="image/Barkod/3.jpg" alt="Tw3" style="width: 100%; height: 100%"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/Barkod/4.jpg" alt="Tw4" style="width: 100%; height: 100%">
+    			<a href="https://yusuftemiz.github.io/image/Barkod/4.jpg" target="_blank" >
+      			<img src="image/Barkod/4.jpg" alt="Tw4" style="width: 100%; height: 100%"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/Barkod/5.jpg" alt="Tw5" style="width: 100%; height: 100%">
+    			<a href="https://yusuftemiz.github.io/image/Barkod/5.jpg" target="_blank" >
+      			<img src="image/Barkod/5.jpg" alt="Tw5" style="width: 100%; height: 100%"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/Barkod/6.jpg" alt="Tw6" style="width: 100%; height: 100%">
+    			<a href="https://yusuftemiz.github.io/image/Barkod/6.jpg" target="_blank" >
+      			<img src="image/Barkod/6.jpg" alt="Tw6" style="width: 100%; height: 100%"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/Barkod/7.jpg" alt="Tw7" style="width: 100%; height: 100%">
+    			<a href="https://yusuftemiz.github.io/image/Barkod/7.jpg" target="_blank" >
+      			<img src="image/Barkod/7.jpg" alt="Tw7" style="width: 100%; height: 100%"></a>
     		</div>
   		</div>
-  
   		<a class="carousel-control-prev" href="#demo1" data-slide="prev">
     		<span class="carousel-control-prev-icon"></span>
   		</a>
@@ -166,11 +179,10 @@
     		<span class="carousel-control-next-icon"></span>
   		</a>
 		</div>
-
-
         </div>
       </div>
     </div>
+
     <div class="card">
       <div class="card-header bg-dark">
         <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseTwo">
@@ -183,6 +195,7 @@
         </div>
       </div>
     </div>
+
     <div class="card">
       <div class="card-header bg-dark">
         <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseThree">
@@ -191,42 +204,52 @@
       </div>
       <div id="collapseThree" class="collapse" data-parent="#accordion">
         <div class="card-body">
-        <p>Kodular platformu üzerinden geliştirilmiştir. Google Firebase Database, Onesignal kullanılmıştır. Twitter kullanıcılarının birbirleriyle etkileşimini arttırmasını sağlayan RT&Fav uygulamasıdır. Uygulama içerisinden görüntüler aşağıdadır.</p>
+        <p>Kodular platformu üzerinden geliştirilmiştir. Google Firebase Database, Onesignal kullanılmıştır. 
+        Twitter kullanıcılarının birbirleriyle etkileşimini arttırmasını sağlayan RT&Fav uygulamasıdır. Uygulama içerisinden görüntüler aşağıdadır.</p>
 
         <div id="demo" class="carousel slide" data-ride="carousel" style="text-align: center;">
 		<div class="carousel-inner" >
     		<div class="carousel-item active" >
-      			<img src="image/TwitteRT/1.jpg" alt="Tw1" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/1.jpg" target="_blank" >
+      			<img src="image/TwitteRT/1.jpg" alt="Tw1" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/2.jpg" alt="Tw2" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/2.jpg" target="_blank" >
+      			<img src="image/TwitteRT/2.jpg" alt="Tw2" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/3.jpg" alt="Tw3" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/3.jpg" target="_blank" >
+      			<img src="image/TwitteRT/3.jpg" alt="Tw3" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/4.jpg" alt="Tw4" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/4.jpg" target="_blank" >
+      			<img src="image/TwitteRT/4.jpg" alt="Tw4" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/5.jpg" alt="Tw5" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/5.jpg" target="_blank" >
+      			<img src="image/TwitteRT/5.jpg" alt="Tw5" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/6.jpg" alt="Tw6" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/6.jpg" target="_blank" >
+      			<img src="image/TwitteRT/6.jpg" alt="Tw6" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/7.jpg" alt="Tw7" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/7.jpg" target="_blank" >
+      			<img src="image/TwitteRT/7.jpg" alt="Tw7" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/8.jpg" alt="Tw8" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/8.jpg" target="_blank" >
+      			<img src="image/TwitteRT/8.jpg" alt="Tw8" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/9.jpg" alt="Tw9" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/9.jpg" target="_blank" >
+      			<img src="image/TwitteRT/9.jpg" alt="Tw9" class="responsive"></a>
     		</div>
     		<div class="carousel-item">
-      			<img src="image/TwitteRT/10.jpg" alt="Tw10" class="responsive">
+    			<a href="https://yusuftemiz.github.io/image/TwitteRT/10.jpg" target="_blank" >
+      			<img src="image/TwitteRT/10.jpg" alt="Tw10" class="responsive"></a>
     		</div>
   		</div>
-  
   		<a class="carousel-control-prev " href="#demo" data-slide="prev">
     		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
   		</a>
@@ -240,8 +263,6 @@
     </div>
   </div>
 </div>
-
-
 
 </div>
 
