yeni proje eklendi

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
 <div id="Merhaba" class="container-fluid bg-dark text-white" style="padding-top:70px;padding-bottom:70px">
   <h1>Merhaba</h1>
-  <p>Buralarda bir yerlerde benim hakkımda bilgileri ve üzerinde çalıştığım projelerimi bulabilirsin.
+  <p>Buralarda bir yerlerde benim hakkımda bilgileri ve üzerinde çalıştığım projelerimi bulabilirsiniz.
   </p> <br> <br>
-  <p>Bulamıyorsan kesinlikle benim hatamdır, daha sonra tekrar deneyin. :)</p>
+  <p>Bulamıyorsanız kesinlikle benim hatamdır, daha sonra tekrar deneyin. :)</p>
 </div>
 <div id="Hakkımda" class="container-fluid border" style="padding-top:70px;padding-bottom:70px">
 	<h1>Hakkımda</h1>
@@ -199,7 +199,7 @@
     <div class="card">
       <div class="card-header bg-dark">
         <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseThree">
-        Twitter RT&Fav Uygulaması - Android Mobil Uygulama
+        Twitter RT & Fav Uygulaması - Android Mobil Uygulama
         </a>
       </div>
       <div id="collapseThree" class="collapse" data-parent="#accordion">
@@ -250,6 +250,7 @@
       			<img src="image/TwitteRT/10.jpg" alt="Tw10" class="responsive"></a>
     		</div>
   		</div>
+
   		<a class="carousel-control-prev " href="#demo" data-slide="prev">
     		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
   		</a>
@@ -257,10 +258,66 @@
     		<span class="carousel-control-next-icon"></span>
   		</a>
 		</div>
-
         </div>
       </div>
     </div>
+
+    <div class="card">
+      <div class="card-header bg-dark">
+        <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseThree">
+        Hızlanmatik-Matematikte Hızlan Uygulaması - Android Mobil Uygulama
+        </a>
+      </div>
+      <div id="collapseThree" class="collapse" data-parent="#accordion">
+        <div class="card-body">
+        <p>Kodular platformu üzerinden geliştirilmiştir. Google Firebase Database kullanılmıştır. 
+        Matematik işlemlerinde çok fazla zaman harcayanlar için zamana karşı işlem kabiliyetini arttırmaya yönelik alıştırma uygulamasıdır. Uygulama içerisinden görüntüler aşağıdadır.</p>
+
+        <div id="demo" class="carousel slide" data-ride="carousel" style="text-align: center;">
+		<div class="carousel-inner" >
+    		<div class="carousel-item active" >
+    			<a href="https://yusuftemiz.github.io/image/Hizlanmatik/1.jpg" target="_blank" >
+      			<img src="image/Hizlanmatik/1.jpg" alt="H1" class="responsive"></a>
+    		</div>
+    		<div class="carousel-item">
+    			<a href="https://yusuftemiz.github.io/image/Hizlanmatik/2.jpg" target="_blank" >
+      			<img src="image/Hizlanmatik/2.jpg" alt="H2" class="responsive"></a>
+    		</div>
+    		<div class="carousel-item">
+    			<a href="https://yusuftemiz.github.io/image/Hizlanmatik/3.jpg" target="_blank" >
+      			<img src="image/Hizlanmatik/3.jpg" alt="H3" class="responsive"></a>
+    		</div>
+    		<div class="carousel-item">
+    			<a href="https://yusuftemiz.github.io/image/Hizlanmatik/4.jpg" target="_blank" >
+      			<img src="image/Hizlanmatik/4.jpg" alt="H4" class="responsive"></a>
+    		</div>
+    		<div class="carousel-item">
+    			<a href="https://yusuftemiz.github.io/image/Hizlanmatik/5.jpg" target="_blank" >
+      			<img src="image/Hizlanmatik/5.jpg" alt="H5" class="responsive"></a>
+    		</div>
+    		<div class="carousel-item">
+    			<a href="https://yusuftemiz.github.io/image/Hizlanmatik/6.jpg" target="_blank" >
+      			<img src="image/Hizlanmatik/6.jpg" alt="H6" class="responsive"></a>
+    		</div>
+    		<div class="carousel-item">
+    			<a href="https://yusuftemiz.github.io/image/Hizlanmatik/7.jpg" target="_blank" >
+      			<img src="image/Hizlanmatik/7.jpg" alt="H7" class="responsive"></a>
+    		</div>
+    		
+  		</div>
+
+  		<a class="carousel-control-prev " href="#demo" data-slide="prev">
+    		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  		</a>
+  		<a class="carousel-control-next " href="#demo" data-slide="next">
+    		<span class="carousel-control-next-icon"></span>
+  		</a>
+		</div>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </div>
 
