--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
 
     <div class="card">
       <div class="card-header bg-dark">
-        <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseThree">
+        <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseFour">
         Hızlanmatik-Matematikte Hızlan Uygulaması - Android Mobil Uygulama
         </a>
       </div>
-      <div id="collapseThree" class="collapse" data-parent="#accordion">
+      <div id="collapseFour" class="collapse" data-parent="#accordion">
         <div class="card-body">
         <p>Kodular platformu üzerinden geliştirilmiştir. Google Firebase Database kullanılmıştır. 
         Matematik işlemlerinde çok fazla zaman harcayanlar için zamana karşı işlem kabiliyetini arttırmaya yönelik alıştırma uygulamasıdır. Uygulama içerisinden görüntüler aşağıdadır.</p>
@@ -325,7 +325,7 @@
 
 
 <div class="footer bg-dark text-white" >
-    Yusuf Temiz Copyright © 2020
+    Yusuf Temiz Copyright © 2021
 </div>
 	
 	<script type="text/javascript" src="js/jquery.min.js"></script>
