--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <p>Kodular platformu üzerinden geliştirilmiştir. Google Firebase Database kullanılmıştır. 
         Matematik işlemlerinde çok fazla zaman harcayanlar için zamana karşı işlem kabiliyetini arttırmaya yönelik alıştırma uygulamasıdır. Uygulama içerisinden görüntüler aşağıdadır.</p>
 
-        <div id="demo" class="carousel slide" data-ride="carousel" style="text-align: center;">
+        <div id="demo2" class="carousel slide" data-ride="carousel" style="text-align: center;">
 		<div class="carousel-inner" >
     		<div class="carousel-item active" >
     			<a href="https://yusuftemiz.github.io/image/Hizlanmatik/1.jpg" target="_blank" >
@@ -306,10 +306,10 @@
     		
   		</div>
 
-  		<a class="carousel-control-prev " href="#demo" data-slide="prev">
+  		<a class="carousel-control-prev " href="#demo2" data-slide="prev">
     		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
   		</a>
-  		<a class="carousel-control-next " href="#demo" data-slide="next">
+  		<a class="carousel-control-next " href="#demo2" data-slide="next">
     		<span class="carousel-control-next-icon"></span>
   		</a>
 		</div>
