--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="tr">	
 <head>
-  <title>Yusuf Temiz Blog</title>
+	<title>Yusuf Temiz Blog</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Yusuf Temiz hakkında bilgiler ve blog sayfası">
-  <meta name="keywords" content="yusuf, temiz, blog">
+  	<meta name="description" content="Yusuf Temiz hakkında bilgiler ve blog sayfası">
+  	<meta name="keywords" content="yusuf, temiz, blog">
 	<link rel="icon" href="image/main.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 
 	<style>
 		
-		body 
-    {
+		body
+		{
 		    position: relative;
  		}
 
  		.carousel-control-prev-icon,
-		.carousel-control-next-icon 
-    {
+		.carousel-control-next-icon
+		{
   			height: 100px;
   			width: 100px;
   			outline: black;
@@ -73,7 +73,7 @@
           <a class="nav-link" href="#Projelerim">Projelerim</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#Projelerim">Sertifikalarım</a>
+          <a class="nav-link" href="#Sertifikalarım">Sertifikalarım</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
@@ -149,7 +149,7 @@
                     DevExpress kullanılmıştır.<br>
                     Microsoft SQL Server Management Studio aracılığıyla veritabanı geliştirilmiştir.<br>
                     Barkod okutmalı hem stok hem satış sistemi olarak kullanılabilecek bir masaüstü uygulamasıdır.<br>
-                    Kod içeriğini <a class="text-dark" href="https://github.com/yusuftemiz/BarkodSistemi" target="_blank">buradan</a> bulabilirsin.<br>
+                    Kod içeriğini <a class="text-blue" href="https://github.com/yusuftemiz/BarkodSistemi" target="_blank">buradan</a> bulabilirsin.<br>
                     Uygulama içerisinden görüntüler aşağıdadır.
                   </p>
                   <div id="demo1" class="carousel slide" data-ride="carousel" style="text-align: center;">
@@ -352,6 +352,42 @@
           </div>
         </div>
       </div>
+    </article>
+    <article>
+    	<div id="Sertifikalarım" class="container-fluid border" style="padding-top:70px;padding-bottom:70px">
+    		<h1>Sertifikalarım</h1>
+    		<a href="Sertifikalar/Algoritma_Tasarimi_Certificate.pdf" class="btn btn-outline-primary btn-block">
+    			Algoritma Tasarımı -- BTK Akademi
+    		</a>
+	    	<br>
+			<a href="Sertifikalar/AppInventor_ile_Mobil_Uygulama_Gelistirme_Certificate.pdf" class="btn btn-outline-secondary btn-block">
+				AppInventor ile Mobil Uygulama Geliştirme -- BTK Akademi
+			</a>
+			<br>
+			<a href="Sertifikalar/Bilgi_Teknolojilerine_Giris_Certificate.pdf" class="btn btn-outline-success btn-block">
+				Bilgi Teknolojilerine Giriş -- BTK Akademi
+			</a>
+			<br>
+			<a href="Sertifikalar/Click4Career_Teknoloji_Gunu.pdf" class="btn btn-outline-info btn-block">
+				Click4Career Teknoloji Günü -- Tofaş
+			</a>
+			<br>
+			<a href="Sertifikalar/Internette_Guvenlik_Certificate.pdf" type="button" class="btn btn-outline-warning btn-block">
+				İnternette Güvenlik -- BTK Akademi
+			</a>
+			<br>
+			<a href="Sertifikalar/Kablosuz_Aglara_Giris_WiFi20.pdf" type="button" class="btn btn-outline-danger btn-block">
+				Kablosuz Ağlara Giriş -- Ağ Yöneticileri Derneği
+			</a>
+			<br>
+			<a href="Sertifikalar/Siber_Guvenlige_Giris_Cyber20.pdf" type="button" class="btn btn-outline-dark btn-block">
+				Siber Güvenliğe Giriş -- Ağ Yöneticileri Derneği
+			</a>
+			<br>
+			<a href="Sertifikalar/Yapay_Zeka_Uygulamalari.pdf" type="button" class="btn btn-outline-primary btn-block">
+				Yapay Zeka Uygulamaları -- Türkiye İş Bankası
+			</a>
+    	</div>
     </article>
   </section>
 
