--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div>
               </div>
             </div>
-            <div class="card">
+            <!--<div class="card">
               <div class="card-header bg-dark">
                 <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseTwo">
                   Personel Yönetim Sistemi - Web Sitesi
@@ -211,7 +211,7 @@
                   ÇOK YAKINDA.
                 </div>
               </div>
-            </div>
+            </div>-->
             <div class="card">
               <div class="card-header bg-dark">
                 <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseThree">
@@ -370,10 +370,6 @@
 			<br>
 			<a href="Sertifikalar/Click4Career_Teknoloji_Gunu.pdf" class="btn btn-outline-info btn-block">
 				Click4Career Teknoloji Günü -- Tofaş
-			</a>
-			<br>
-			<a href="Sertifikalar/Internette_Guvenlik_Certificate.pdf" type="button" class="btn btn-outline-warning btn-block">
-				İnternette Güvenlik -- BTK Akademi
 			</a>
 			<br>
 			<a href="Sertifikalar/Kablosuz_Aglara_Giris_WiFi20.pdf" type="button" class="btn btn-outline-danger btn-block">
