--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <header>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">  
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">  
     <a class="navbar-brand mb-0 h1" href="https://yusuftemiz.github.io">
-    	&#x4B5; Yusuf Temiz
+    	<strong>&#x4B5; Yusuf Temiz</strong> 
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" >
       <span class="navbar-toggler-icon" ></span>
@@ -140,12 +140,12 @@
             <div class="card">
               <div class="card-header bg-dark">
                 <a class="card-link text-white" data-toggle="collapse" href="#collapseOne">
-                  Barkodlu Stok ve Satış Sistemi - Masaüstü Uygulaması
+                  <strong>Barkodlu Stok ve Satış Sistemi - Masaüstü Uygulaması</strong> 
                 </a>
               </div>
               <div id="collapseOne" class="collapse" data-parent="#accordion">
                 <div class="card-body">
-                  <p>Visual Studio üzerinden C# programlama diliyle yazılmıştır.<br> 
+                  <p> Visual Studio üzerinden C# programlama diliyle yazılmıştır.<br> 
                     DevExpress kullanılmıştır.<br>
                     Microsoft SQL Server Management Studio aracılığıyla veritabanı geliştirilmiştir.<br>
                     Barkod okutmalı hem stok hem satış sistemi olarak kullanılabilecek bir masaüstü uygulamasıdır.<br>
@@ -215,12 +215,12 @@
             <div class="card">
               <div class="card-header bg-dark">
                 <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseThree">
-                  Twitter RT & Fav Uygulaması - Android Mobil Uygulama
+                  <strong>Twitter RT & Fav Uygulaması - Android Mobil Uygulama</strong> 
                 </a>
               </div>
               <div id="collapseThree" class="collapse" data-parent="#accordion">
                 <div class="card-body">
-                  <p>Kodular platformu üzerinden geliştirilmiştir.<br>
+                  <p><strong>Kodular</strong> platformu üzerinden geliştirilmiştir.<br>
                     Google Firebase Database, Onesignal kullanılmıştır.<br>
                     Twitter kullanıcılarının birbirleriyle etkileşimini arttırmasını sağlayan RT&Fav uygulamasıdır.<br>
                     Uygulama içerisinden görüntüler aşağıdadır.
@@ -291,12 +291,12 @@
             <div class="card">
                 <div class="card-header bg-dark">
                   <a class="collapsed card-link text-white" data-toggle="collapse" href="#collapseFour">
-                    Hızlanmatik-Matematikte Hızlan Uygulaması - Android Mobil Uygulama
+                    <strong>Hızlanmatik-Matematikte Hızlan Uygulaması - Android Mobil Uygulama</strong> 
                   </a>
                 </div>
                 <div id="collapseFour" class="collapse" data-parent="#accordion">
                   <div class="card-body">
-                    <p>Kodular platformu üzerinden geliştirilmiştir.<br>
+                    <p><strong>Kodular</strong> platformu üzerinden geliştirilmiştir.<br>
                       Google Firebase Database kullanılmıştır.<br>
                       Matematik işlemlerinde çok fazla zaman harcayanlar için zamana karşı işlem kabiliyetini arttırmaya yönelik alıştırma uygulamasıdır.<br>
                       Uygulama içerisinden görüntüler aşağıdadır.
@@ -360,29 +360,29 @@
     			Algoritma Tasarımı -- BTK Akademi
     		</a>
 	    	<br>
-			<a href="Sertifikalar/AppInventor_ile_Mobil_Uygulama_Gelistirme_Certificate.pdf" class="btn btn-outline-secondary btn-block">
-				AppInventor ile Mobil Uygulama Geliştirme -- BTK Akademi
-			</a>
-			<br>
-			<a href="Sertifikalar/Bilgi_Teknolojilerine_Giris_Certificate.pdf" class="btn btn-outline-success btn-block">
-				Bilgi Teknolojilerine Giriş -- BTK Akademi
-			</a>
-			<br>
-			<a href="Sertifikalar/Click4Career_Teknoloji_Gunu.pdf" class="btn btn-outline-info btn-block">
-				Click4Career Teknoloji Günü -- Tofaş
-			</a>
-			<br>
-			<a href="Sertifikalar/Kablosuz_Aglara_Giris_WiFi20.pdf" type="button" class="btn btn-outline-danger btn-block">
-				Kablosuz Ağlara Giriş -- Ağ Yöneticileri Derneği
-			</a>
-			<br>
-			<a href="Sertifikalar/Siber_Guvenlige_Giris_Cyber20.pdf" type="button" class="btn btn-outline-dark btn-block">
-				Siber Güvenliğe Giriş -- Ağ Yöneticileri Derneği
-			</a>
-			<br>
-			<a href="Sertifikalar/Yapay_Zeka_Uygulamalari.pdf" type="button" class="btn btn-outline-primary btn-block">
-				Yapay Zeka Uygulamaları -- Türkiye İş Bankası
-			</a>
+  			<a href="Sertifikalar/AppInventor_ile_Mobil_Uygulama_Gelistirme_Certificate.pdf" class="btn btn-outline-secondary btn-block">
+  				AppInventor ile Mobil Uygulama Geliştirme -- BTK Akademi
+  			</a>
+  			<br>
+  			<a href="Sertifikalar/Bilgi_Teknolojilerine_Giris_Certificate.pdf" class="btn btn-outline-success btn-block">
+  				Bilgi Teknolojilerine Giriş -- BTK Akademi
+  			</a>
+  			<br>
+  			<a href="Sertifikalar/Click4Career_Teknoloji_Gunu.pdf" class="btn btn-outline-info btn-block">
+  				Click4Career Teknoloji Günü -- Tofaş
+  			</a>
+  			<br>
+  			<a href="Sertifikalar/Kablosuz_Aglara_Giris_WiFi20.pdf" type="button" class="btn btn-outline-danger btn-block">
+  				Kablosuz Ağlara Giriş -- Ağ Yöneticileri Derneği
+  			</a>
+  			<br>
+  			<a href="Sertifikalar/Siber_Guvenlige_Giris_Cyber20.pdf" type="button" class="btn btn-outline-dark btn-block">
+  				Siber Güvenliğe Giriş -- Ağ Yöneticileri Derneği
+  			</a>
+  			<br>
+  			<a href="Sertifikalar/Yapay_Zeka_Uygulamalari.pdf" type="button" class="btn btn-outline-primary btn-block">
+  				Yapay Zeka Uygulamaları -- Türkiye İş Bankası
+  			</a>
     	</div>
     </article>
   </section>
