--- a/kodular-turkce-kaynak.html
+++ b/kodular-turkce-kaynak.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Kodular platformundaki çalışmalarımı türkçe kaynak olarak sizlere sunuyorum.">
 		<meta name="keywords" content="kodular türkçe kaynak,kodular,kodlama,mobil uygulama yapma,">
+		<meta name="google-site-verification" content="oNmeCAYHXNBvW92FjCMf0U57DKlgcFZdWgiffMh2U28" />
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="icon" href="image/main.ico" type="image/x-icon" />
