--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
   	<meta name="description" content="Yusuf Temiz hakkında bilgiler ve blog sayfası">
   	<meta name="keywords" content="yusuf, temiz, blog">
+  	<meta name="google-site-verification" content="oNmeCAYHXNBvW92FjCMf0U57DKlgcFZdWgiffMh2U28" />
 	<link rel="icon" href="image/main.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
