--- a/kodular-turkce-kaynak.html
+++ b/kodular-turkce-kaynak.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Kodular platformundaki çalışmalarımı türkçe kaynak olarak sizlere sunuyorum.">
-		<meta name="keywords" content="kodular türkçe kaynak,kodular,kodlama,mobil uygulama yapma,">
+		<meta name="keywords" content="kodular,türkçe,kaynak,kodular,kodlama,mobil,uygulama,yapma">
 		<meta name="google-site-verification" content="oNmeCAYHXNBvW92FjCMf0U57DKlgcFZdWgiffMh2U28" />
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -24,9 +24,9 @@
 
 	</head>
 
-	<body style="background-color: gray">
+	<body style="background-color: black">
 		<div class="wrapper row1">
-  <header id="header" class="hoc clear ">
+  <header id="header" class="hoc clear">
     <div id="logo" class="fl_left"> 
       <h1><a href="kodular-turkce-kaynak.html"><strong>JR. NE BULURSA</strong></a></h1>
     </div>
@@ -65,9 +65,9 @@
 		  <section id="introblocks" class="hoc container clear"> 
 		    <ul class="nospace group">
 		      <li class="one_third first">
-		        <article><a href="#kodular1" data-toggle="modal"><i class="fab fa-youtube"></i></a>
+		        <article><a href="#kodular1" data-toggle="modal"><i class="fab fa-youtube" style=""></i>
 		          <h6 class="heading underline">Kodular Mobil Uygulama Açılış Ekranı </h6>
-		          <p>Mobil uygulamamızın ilk ekranını yani giriş ekranımızı nasıl yaparız?</p>
+		          <p>Mobil uygulamamızın ilk ekranını yani giriş ekranımızı nasıl yaparız?</p></a>
 		        </article>
 		        
 		      </li>
@@ -207,6 +207,6 @@
 		  </section>
 		</div>!-->
 
-  	<footer class="footer bg-dark text-white" style="text-align: center;"> Yusuf Temiz Copyright © 2021 </footer>
+  	<footer class="footer text-white" style="text-align: center;"> Yusuf Temiz Copyright © 2021 </footer>
 	</body>
 </html>
