--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="col-sm"> <br>
-         <p>İlkokul ve liseyi doğduğum şehirde okudum. Üniversite sınavında Samsun Ondokuz Mayıs Üniversitesini kazandım ve 4 yıllık Bilgisayar Mühendisliği bölümünü bitirmek üzereyim.<br><br>
+         <p>İlkokul ve liseyi doğduğum şehirde okudum. Üniversite sınavında Samsun Ondokuz Mayıs Üniversitesini kazandım ve 4 yıllık Bilgisayar Mühendisliği bölümünü bitirdim.<br><br>
           --Okul derslerim gereği Ruby, C, Java, Sql, Android öğrendim,<br><br>
           --C# dilinde Microsoft sql server management studio kullanarak veritabanlı masaüstü uygulaması geliştirdim,<br><br>
           --C++ dilinde Omnet++ kütüphanesini kullanarak projeler geliştirdim,<br><br>
